namespace Application.Catalogs.Models.GetCatalogChildren;

public sealed record NameIdPair(string Name, int Id);

